--- a/products.html
+++ b/products.html
@@ -19,15 +19,15 @@
 					<ul>
                     	<li><a href="index.html">Home</a></li>  
                     	<li><a href="#">Products</a></li>
-                    	<li><a href="#">Our Brand</a></li>
-                    	<li><a href="#">Contact</a></li> 
+                    	<li><a href="ourBrand.html">Our Brand</a></li>
+                    	<li><a href="contact.html">Contact</a></li> 
                 	</ul>
                 </nav>
 				<form id="searchBar" action="form.php" method="post"> 
                     <input type="text" required size="26" placeholder="Search">    
                 </form>
                 <ul>
-					<li class="shoppingCart"><a href="#"> C </a></li>
+					<li class="shoppingCart"><a href="cart.html"> C </a></li>
 				</ul>
 			</header>
 
@@ -38,56 +38,56 @@
 			</section>
 
 
-			<section class="footwear">
-				<h2>Footwear</h2>
+			<section class="Beer">
+				<h2>Beer</h2>
 				<div class="lineDivider"></div>
 				<h3>Classic Series</h3>
 				<section class="series">
 					<h2 class="hidden">Classic Series Content</h2>
 					<section> <!-- Start Product Box -->
-						<h2 class="hidden">Shoe #1 Content</h2>
-						<div class="shoeimg">
+						<h2 class="hidden">Beer #1 Content</h2>
+						<div class="beerimg">
 							<img src="images/index/product_image.jpg" alt="Product Image">
 						</div>
-						<h4>Shoe #1</h4>
+						<h4>Beer #1</h4>
 						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>USD $130</p>
+						<p>CAN $2.85</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
 					</section>
 					<section> <!-- Start Product Box -->
-						<h2 class="hidden">Shoe #2 Content</h2>
-						<div class="shoeimg">
+						<h2 class="hidden">Beer #2 Content</h2>
+						<div class="beerimg">
 							<img src="images/index/product_image.jpg" alt="Product Image">
 						</div>
-						<h4>Shoe #2</h4>
+						<h4>Beer #2</h4>
 						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>USD $130</p>
+						<p>CAN $2.85</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
 					</section>
 					<section> <!-- Start Product Box -->
-						<h2 class="hidden">Shoe #3 Content</h2>
-						<div class="shoeimg">
+						<h2 class="hidden">Beer #3 Content</h2>
+						<div class="beerimg">
 							<img src="images/index/product_image.jpg" alt="Product Image">
 						</div>
-						<h4>Shoe #3</h4>
+						<h4>Beer #3</h4>
 						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>USD $130</p>
+						<p>CAN $2.85</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
 					</section>
 					<section> <!-- Start Product Box -->
-						<h2 class="hidden">Shoe #4 Content</h2>
-						<div class="shoeimg">
+						<h2 class="hidden">Beer #4 Content</h2>
+						<div class="beerimg">
 							<img src="images/index/product_image.jpg" alt="Product Image">
 						</div>
-						<h4>Shoe #4</h4>
+						<h4>Beer #4</h4>
 						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>USD $130</p>
+						<p>CAN $2.85</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
@@ -97,49 +97,49 @@
 				<section class="series">
 					<h2 class="hidden">Limited Series Content</h2>
 					<section> <!-- Start Product Box -->
-						<h2 class="hidden">Shoe #1 Content</h2>
-						<div class="shoeimg">
+						<h2 class="hidden">Beer #1 Content</h2>
+						<div class="beerimg">
 							<img src="images/index/product_image.jpg" alt="Product Image">
 						</div>
-						<h4>Shoe #1</h4>
+						<h4>Beer #1</h4>
 						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>USD $130</p>
+						<p>CAN $2.85</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
 					</section>
 					<section> <!-- Start Product Box -->
-						<h2 class="hidden">Shoe #2 Content</h2>
-						<div class="shoeimg">
+						<h2 class="hidden">Beer #2 Content</h2>
+						<div class="beerimg">
 							<img src="images/index/product_image.jpg" alt="Product Image">
 						</div>
-						<h4>Shoe #2</h4>
+						<h4>Beer #2</h4>
 						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>USD $130</p>
+						<p>CAN $2.85</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
 					</section>
 					<section> <!-- Start Product Box -->
-						<h2 class="hidden">Shoe #3 Content</h2>
-						<div class="shoeimg">
+						<h2 class="hidden">Beer #3 Content</h2>
+						<div class="beerimg">
 							<img src="images/index/product_image.jpg" alt="Product Image">
 						</div>
-						<h4>Shoe #3</h4>
+						<h4>Beer #3</h4>
 						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>USD $130</p>
+						<p>CAN $2.85</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
 					</section>
 					<section> <!-- Start Product Box -->
-						<h2 class="hidden">Shoe #4 Content</h2>
-						<div class="shoeimg">
+						<h2 class="hidden">Beer #4 Content</h2>
+						<div class="beerimg">
 							<img src="images/index/product_image.jpg" alt="Product Image">
 						</div>
-						<h4>Shoe #4</h4>
+						<h4>Beer #4</h4>
 						<p class="prdctinfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						<p>USD $130</p>
+						<p>CAN $2.85</p>
 						<ul>
 							<li class="prdctBtn"><a href="#"> MORE </a></li>
 						</ul>
@@ -156,8 +156,8 @@
 					<ul>
                     	<li><a href="index.html">Home</a></li>  
                     	<li><a href="#">Products</a></li>
-                    	<li><a href="#">Our Brand</a></li>
-                    	<li><a href="#">Contact</a></li> 
+                    	<li><a href="ourBrand.html">Our Brand</a></li>
+                    	<li><a href="contact.html">Contact</a></li> 
                 	</ul>
                 </nav>
 				<p class="copyright">C Alexander  Keith’s  /  PUMA,  2020</p>
