--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 					<ul>
                     	<li><a href="#">Home</a></li>  
                     	<li><a href="products.html">Products</a></li>
-                    	<li><a href="#">Our Brand</a></li>
-                    	<li><a href="#">Contact</a></li> 
+                    	<li><a href="ourBrand.html">Our Brand</a></li>
+                    	<li><a href="contact.html">Contact</a></li> 
                 	</ul>
                 </nav>
 				<form id="searchBar" action="form.php" method="post"> 
                     <input type="text" required size="26" placeholder="Search">    
                 </form>
                 <ul>
-					<li class="shoppingCart"><a href="#"> C </a></li>
+					<li class="shoppingCart"><a href="cart.html"> C </a></li>
 				</ul>
 			</header>
 
@@ -39,55 +39,55 @@
 
 
 			<section class="ftdProducts">
-				<h2> Featured Products </h2>
+				<h2>Featured Products</h2>
 				<div class="lineDivider"></div>
-				<section class="ftdShoes">
-					<h2 class="hidden">Featured Shoes</h2>
+				<section class="ftdBeer">
+					<h2 class="hidden">Featured Beer</h2>
 					<section class="imgText"> <!-- Start Product Box -->
-						<h2 class="hidden">Featured Shoes Text and Image</h2>
+						<h2 class="hidden">Featured Beer Text and Image</h2>
 						<div class="ftdImg">
 							<img src="images/index/product_image.jpg" alt="Product Image">
 						</div>
 						<section class="ftdText">
-							<h4>Shoe Name</h4>
-							<p class="ftdInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-							<p>USD $130</p>
+							<h4>Beer Name</h4>
+							<p class="ftdInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor.</p>
+							<p>CAN $2.85</p>
 							<ul>
-								<li class="prdctBtn"><a href="#"> MORE </a></li>
+								<li class="prdctBtn"><a href="products.html"> MORE </a></li>
 							</ul>
 						</section>
 					</section>
 					<section class="imgText"> <!-- Start Product Box -->
-						<h2 class="hidden">Featured Shoes Text and Image 2</h2>
+						<h2 class="hidden">Featured Beer Text and Image 2</h2>
 						<div class="ftdImg">
 							<img src="images/index/product_image.jpg" alt="Product Image">
 						</div>
 						<section class="ftdText">
-							<h4>Shoe Name</h4>
-							<p class="ftdInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-							<p>USD $130</p>
+							<h4>Beer Name</h4>
+							<p class="ftdInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor.</p>
+							<p>CAN $2.85</p>
 							<ul>
-								<li class="prdctBtn"><a href="#"> MORE </a></li>
+								<li class="prdctBtn"><a href="products.html"> MORE </a></li>
 							</ul>
 						</section>
 					</section>
 					<section class="imgText"> <!-- Start Product Box -->
-						<h2 class="hidden">Featured Shoes Text and Image 3</h2>
+						<h2 class="hidden">Featured Beer Text and Image 3</h2>
 						<div class="ftdImg">
 							<img src="images/index/product_image.jpg" alt="Product Image">
 						</div>
 						<section class="ftdText">
-							<h4>Shoe Name</h4>
-							<p class="ftdInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-							<p>USD $130</p>
+							<h4>Beer Name</h4>
+							<p class="ftdInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor. </p>
+							<p>CAN $2.85</p>
 							<ul>
-								<li class="prdctBtn"><a href="#"> MORE </a></li>
+								<li class="prdctBtn"><a href="products.html"> MORE </a></li>
 							</ul>
 						</section>
 					</section>
 				</section>
 					<ul>
-						<li class="shpMrBtn"><a href="#"> Shop More </a></li>
+						<li class="shpMrBtn"><a href="products.html"> Shop More </a></li>
 					</ul>
 			</section>
 
@@ -97,7 +97,7 @@
 					<h2>Our Brand</h2>
 					<p class="brndInfo">Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem Ipsum Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 					<ul>
-						<li class="moreBtn"><a href="#"> MORE </a></li>
+						<li class="moreBtn"><a href="ourBrand.html"> MORE </a></li>
 					</ul>
 				</div>
 				<div class="brndImg">
@@ -114,8 +114,8 @@
 					<ul>
                     	<li><a href="#">Home</a></li>  
                     	<li><a href="products.html">Products</a></li>
-                    	<li><a href="#">Our Brand</a></li>
-                    	<li><a href="#">Contact</a></li> 
+                    	<li><a href="ourBrand.html">Our Brand</a></li>
+                    	<li><a href="contact.html">Contact</a></li> 
                 	</ul>
                 </nav>
 				<p class="copyright">C Alexander  Keith’s  /  PUMA,  2020</p>
