adding all svgs

--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,7 @@
 
 			<header class="mainHeader">
 				<h2 class="hidden">Main Header</h2>
-				<div class="logoHeader">Logo</div>
+				<div class="logoHeader"><img src=images/SVG/a.kieths_puma_logo.svg alt="a.kieths_puma_logo"></div>
 				<nav class="mainNav">
 					<h2 class="hidden">Main Nav</h2>
 					<ul>
@@ -27,7 +27,7 @@
                     <input type="text" required size="26" placeholder="Search">    
                 </form>
                 <ul>
-					<li class="shoppingCart"><a href="#"> C </a></li>
+					<li class="shoppingCart"><a href="cart.html"><img src=images/SVG/cart_logo.svg alt="Cart SVG"></a></li>
 				</ul>
 			</header>
 
@@ -36,7 +36,9 @@
 				<h2>Your Cart</h2>
 				<div class="lineDivider"></div>
 				<section class="purchase">
+					<h2 class="hidden">Purchase</h2>
 					<section class="purchasePic">
+						<h2 class="hidden">Purchase Image</h2>
 						<img src="images/index/Hero_Image_Scroll.jpg" alt="Hero Image Scroll">
 					</section>
 					<section class="purchaseTxt">
@@ -53,7 +55,9 @@
 				</section>
 				<div class="lineDividerLong"></div>
 				<section class="purchase">
+					<h2 class="hidden">Purchase</h2>
 					<section class="purchasePic">
+						<h2 class="hidden">Purchase Image</h2>
 						<img src="images/index/Hero_Image_Scroll.jpg" alt="Hero Image Scroll">
 					</section>
 					<section class="purchaseTxt">
@@ -80,6 +84,7 @@
 				<div class="lineDividerMedium"></div>
 				<h5>ESTIMATED TOTAL - $27.35</h5>
 				<section class="promoCode">
+					<h2 class="hidden">Promo Code</h2>
 					<form action="form.php" method="post">
                     	<label>APPLY PROMO CODE</label>
                     	<input type="text" required size="18" placeholder=""> 
@@ -91,7 +96,7 @@
 
 			<footer class="mainFooter">
 				<h2 class="hidden">Main Footer</h2>
-				<div class="logoFooter">Logo</div>
+				<div class="logoFooter"><img src=images/SVG/a.kieths_puma_logo.svg alt="a.kieths_puma_logo"></div>
 				<nav class="footerNav">
 					<h2 class="hidden">Footer Nav</h2>
 					<ul>
