--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 			<header class="mainHeader">
 				<h2 class="hidden">Main Header</h2>
-				<div class="logoHeader">Logo</div>
+				<div class="logoHeader"><img src=images/SVG/a.kieths_puma_logo.svg alt="a.kieths_puma_logo"></div>
 				<nav class="mainNav">
 					<h2 class="hidden">Main Nav</h2>
 					<ul>
@@ -27,7 +27,7 @@
                     <input type="text" required size="26" placeholder="Search">    
                 </form>
                 <ul>
-					<li class="shoppingCart"><a href="cart.html"> C </a></li>
+					<li class="shoppingCart"><a href="cart.html"><img src=images/SVG/cart_logo.svg alt="Cart SVG"></a></li>
 				</ul>
 			</header>
 
@@ -43,6 +43,7 @@
 				<div class="lineDivider"></div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
 				<section class="contactForm">
+					<h2 class="hidden">Contact Form</h2>
                 	<form action="form.php" method="post">
                     	<label>First Name</label>
                     	<input type="text" required size="22" placeholder=""> 
@@ -66,18 +67,19 @@
 				<div class="lineDivider"></div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
 				<section class="socialMediaPics">
-					<div class="mediaPics"><img src="images/contact/facebook.jpg" alt="Facebook Pic"></div>
-					<div class="mediaPics"><img src="images/contact/facebook.jpg" alt="Facebook Pic"></div>
-					<div class="mediaPics"><img src="images/contact/facebook.jpg" alt="Facebook Pic"></div>
-					<div class="mediaPics"><img src="images/contact/facebook.jpg" alt="Facebook Pic"></div>
-					<div class="mediaPics"><img src="images/contact/facebook.jpg" alt="Facebook Pic"></div>
+					<h2 class="hidden">Social Media Logos</h2>
+					<ul><li class="mediaPics"><a href="https://www.facebook.com/"><img src="images/SVG/facebook_logo.svg" alt="Facebook Pic"></a></li></ul>
+					<ul><li class="mediaPics"><a href="https://twitter.com/"><img src="images/SVG/twitter_logo.svg" alt="Twitter Pic"></a></li></ul>
+					<ul><li class="mediaPics"><a href="https://www.instagram.com/?hl=en"><img src="images/SVG/instagram_logo.svg" alt="Instagram Pic"></a></li></ul>
+					<ul><li class="mediaPics"><a href="https://www.pinterest.ca/"><img src="images/SVG/pinterest_logo.svg" alt="Pinterest Pic"></a></li></ul>
+					<ul><li class="mediaPics"><a href="https://www.youtube.com/"><img src="images/SVG/youtube_logo.svg" alt="Youtube Pic"></a></li></ul>
 				</section>
 			</section>
 
 
 			<footer class="mainFooter">
 				<h2 class="hidden">Main Footer</h2>
-				<div class="logoFooter">Logo</div>
+				<div class="logoFooter"><img src=images/SVG/a.kieths_puma_logo.svg alt="a.kieths_puma_logo"></div>
 				<nav class="footerNav">
 					<h2 class="hidden">Footer Nav</h2>
 					<ul>
