--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
 
 			<header class="mainHeader">
 				<h2 class="hidden">Main Header</h2>
-				<div class="logoHeader">Logo</div>
+				<div class="logoHeader"><img src=images/SVG/a.kieths_puma_logo.svg alt="a.kieths_puma_logo"></div>
 				<nav class="mainNav">
 					<h2 class="hidden">Main Nav</h2>
 					<ul>
@@ -27,7 +27,7 @@
                     <input type="text" required size="26" placeholder="Search">    
                 </form>
                 <ul>
-					<li class="shoppingCart"><a href="cart.html"> C </a></li>
+					<li class="shoppingCart"><a href="cart.html"><img src=images/SVG/cart_logo.svg alt="Cart SVG"></a></li>
 				</ul>
 			</header>
 
@@ -150,7 +150,7 @@
 
 			<footer class="mainFooter">
 				<h2 class="hidden">Main Footer</h2>
-				<div class="logoFooter">Logo</div>
+				<div class="logoFooter"><img src=images/SVG/a.kieths_puma_logo.svg alt="a.kieths_puma_logo"></div>
 				<nav class="footerNav">
 					<h2 class="hidden">Footer Nav</h2>
 					<ul>
